--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "xlsx": "^0.18.5",
-    "expo-linear-gradient": "~14.1.5"
+    "expo-linear-gradient": "~14.1.5",
+    "expo-updates": "~0.28.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
