--- a/eas.json
+++ b/eas.json
@@ -1,24 +1,31 @@
 {
     "cli": {
-      "version": ">= 16.15.0",
-      "appVersionSource": "remote"
+        "version": ">= 16.15.0",
+        "appVersionSource": "remote"
     },
     "build": {
-      "development": {
-        "developmentClient": true,
-        "distribution": "internal"
-      },
-      "preview": {
-        "distribution": "internal",
-        "android":{
-          "buildType": "apk"
+        "development": {
+            "developmentClient": true,
+            "distribution": "internal"
+        },
+        "preview": {
+            "distribution": "internal",
+            "android": {
+                "buildType": "apk",
+                "gradleCommand": ":app:assembleDebug"
+            },
+            "ios": {
+                "simulator": true
+            }
+        },
+        "production": {
+            "autoIncrement": true,
+            "android": {
+                "buildType": "app-bundle"
+            }
         }
-      },
-      "production": {
-        "autoIncrement": true
-      }
     },
     "submit": {
-      "production": {}
+        "production": {}
     }
-  }
+}
